--- a/src/patrol.vcxproj
+++ b/src/patrol.vcxproj
@@ -41,12 +41,12 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\DevTools\SFML-2.3.2\include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\DevTools\glm;C:\DevTools\SFML-2.3.2\include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\DevTools\SFML-2.3.2\lib;C:\DevTools\Bullet\Glut;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>C:\DevTools\SFML-2.3.2\include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\DevTools\glm;C:\DevTools\SFML-2.3.2\include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\DevTools\SFML-2.3.2\lib;C:\DevTools\Bullet\Glut;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
