--- a/src/patrol.vcxproj.filters
+++ b/src/patrol.vcxproj.filters
@@ -9,6 +9,7 @@
     <ClCompile Include="Simulation.cpp" />
     <ClCompile Include="PatrolCarLight.cpp" />
     <ClCompile Include="DirtMap.cpp" />
+    <ClCompile Include="Global.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Node.h" />
