--- a/src/patrol.vcxproj
+++ b/src/patrol.vcxproj
@@ -42,12 +42,12 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <IncludePath>C:\DevTools\glm;C:\DevTools\SFML-2.3.2\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\DevTools\SFML-2.3.2\lib;C:\DevTools\Bullet\Glut;$(LibraryPath)</LibraryPath>
+    <LibraryPath>C:\DevTools\SFML-2.3.2\lib;C:\DevTools\glew-1.11.0\lib\Release\Win32;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <IncludePath>C:\DevTools\glm;C:\DevTools\SFML-2.3.2\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\DevTools\SFML-2.3.2\lib;C:\DevTools\Bullet\Glut;$(LibraryPath)</LibraryPath>
+    <LibraryPath>C:\DevTools\SFML-2.3.2\lib;C:\DevTools\glew-1.11.0\lib\Release\Win32;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
